@@ -121,4 +121,211 @@ subtest '$id with an empty fragment' => sub {
   );
 };
 
+subtest '$recursiveRef with no use of $recursiveAnchor' => sub {
+  cmp_deeply(
+    $js->evaluate(
+      { foo => { bar => 'hello', baz => 1 } },
+      {
+        '$id' => 'http://localhost:4242',
+        '$recursiveAnchor' => true,
+        anyOf => [
+          { type => 'string' },
+          {
+            type => 'object',
+            additionalProperties => { '$recursiveRef' => '#' },
+          },
+        ],
+      },
+    )->TO_JSON,
+    {
+      valid => bool(0),
+      errors => [
+        {
+          instanceLocation => '',
+          keywordLocation => '/anyOf/0/type',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf/0/type',
+          error => 'wrong type (expected string)',
+        },
+        # /anyOf/1 with ''
+        # /anyOf/1/additionalProperties/$recursiveRef with '/foo'
+        # /anyOf/1/additionalProperties/$recursiveRef/anyOf/0 - wrong type
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/anyOf/1/additionalProperties/$recursiveRef/anyOf/0/type',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf/0/type',
+          error => 'wrong type (expected string)',
+        },
+        # /anyOf/1/additionalProperties/$recursiveRef/anyOf/1 with /foo
+        # additionalProperties:  consider /foo/bar
+        # /anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties/$recursiveRef
+        # /anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties/$recursiveRef/anyOf/0 - is string, so no error
+        # /anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties/$recursiveRef/anyOf/1 - is object
+        # additionalProperties:  consider /foo/baz
+        # is neither string or object
+        {
+          instanceLocation => '/foo/baz',
+          keywordLocation => '/anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties/$recursiveRef/anyOf/0/type',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf/0/type',
+          error => 'wrong type (expected string)',
+        },
+        {
+          instanceLocation => '/foo/baz',
+          keywordLocation => '/anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties/$recursiveRef/anyOf/1/type',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf/1/type',
+          error => 'wrong type (expected object)',
+        },
+        {
+          instanceLocation => '/foo/baz',
+          keywordLocation => '/anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties/$recursiveRef/anyOf',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf',
+          error => 'no subschemas are valid',
+        },
+        # and now we start to unwind.
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/anyOf/1/additionalProperties/$recursiveRef/anyOf/1/additionalProperties',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf/1/additionalProperties',
+          error => 'not all properties are valid',
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/anyOf/1/additionalProperties/$recursiveRef/anyOf',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf',
+          error => 'no subschemas are valid',
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/anyOf/1/additionalProperties',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf/1/additionalProperties',
+          error => 'not all properties are valid',
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/anyOf',
+          absoluteKeywordLocation => 'http://localhost:4242#/anyOf',
+          error => 'no subschemas are valid',
+        },
+      ],
+    },
+    '$recursiveRef without nested $recursiveAnchor behaves like $ref',
+  );
+};
+
+subtest '$recursiveAnchor and $recursiveRef - standard usecases' => sub {
+  my $schema = {
+    '$defs' => {
+      allow_ints => {
+        '$recursiveAnchor' => true,
+        anyOf => [
+          { '$ref' => '#/$defs/base' },   # the base: all leaf nodes must be booleans
+          { type => 'integer' },          # or, integers are okay too
+        ],
+      },
+      base => {
+        '$recursiveAnchor' => true,
+        anyOf => [
+          { type => 'boolean' },
+          {
+            type => 'object',
+            additionalProperties => { '$recursiveRef' => '#' }, # allow schema mods here too
+          },
+        ],
+      },
+    },
+    '$recursiveAnchor' => true,
+    # here is where I insert a $ref to whatever subschema I want.
+  };
+
+  cmp_deeply(
+    $js->evaluate(
+      { foo => true },
+      { %$schema, '$ref' => '#/$defs/base' },
+    )->TO_JSON,
+    {
+      valid => bool(1),
+    },
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      { foo => 1 },
+      { %$schema, '$ref' => '#/$defs/base' },
+    )->TO_JSON,
+    {
+      valid => bool(0),
+      errors => [
+# 0 data: ''       schema: $ref/anyOf/0  - fails, not bool
+#   data: /foo   schema: $ref/anyOf/0/additionalProperties/$recursiveRef
+# 1 data: /foo   schema: $ref/anyOf/0/additionalProperties/$recursiveRef/anyOf/0/type       # - fails, not bool
+# 2 data: /foo/1 schema: $ref/anyOf/1/additionalProperties/$recursiveRef/anyOf/1/type       # - fails, not object.
+# 3                        $ref/anyOf/1/additionalProperties/$recursiveRef/anyOf fails
+# 4                        $ref/anyOf/1/additionalProperties fails
+# 5                        $ref/anyOf fails
+        {
+          instanceLocation => '',
+          keywordLocation => '/$ref/anyOf/0/type',
+          absoluteKeywordLocation => '#/$defs/base/anyOf/0/type',
+          error => 'wrong type (expected boolean)',
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/$ref/anyOf/1/additionalProperties/$recursiveRef/$ref/anyOf/0/type',
+          absoluteKeywordLocation => '#/$defs/base/anyOf/0/type',
+          error => 'wrong type (expected boolean)',
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/$ref/anyOf/1/additionalProperties/$recursiveRef/$ref/anyOf/1/type',
+          absoluteKeywordLocation => '#/$defs/base/anyOf/1/type',
+          error => 'wrong type (expected object)',
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/$ref/anyOf/1/additionalProperties/$recursiveRef/$ref/anyOf',
+          absoluteKeywordLocation => '#/$defs/base/anyOf',
+          error => 'no subschemas are valid',
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/$ref/anyOf/1/additionalProperties',
+          absoluteKeywordLocation => '#/$defs/base/anyOf/1/additionalProperties',
+          error => 'not all properties are valid',
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/$ref/anyOf',
+          absoluteKeywordLocation => '#/$defs/base/anyOf',
+          error => 'no subschemas are valid',
+        },
+      ],
+    },
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      { foo => true },
+      { %$schema, '$ref' => '#/$defs/allow_ints' },
+    )->TO_JSON,
+    {
+      valid => bool(1),
+    },
+  );
+
+  cmp_deeply(
+    $js->evaluate(
+      {
+        foo => 1,
+      },
+      $schema,
+    )->TO_JSON,
+    {
+      valid => bool(1),
+    },
+  );
+};
+
+# TODO: $recursiveRef with a fragment - resolve against $recursiveAnchor uri
+# TODO: $recursiveRef with a path portion - resolve against $recursiveAnchor uri
+# TODO: error case where $recursiveRef is not '#' and $recursiveAnchor uri has a fragment
+
 done_testing;
