@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - add support for $recursiveAnchor and $recursiveRef
 
 0.003     2020-05-31 20:10:02Z
           - add infinite recursion detection
